Created functions for components. Refactoring! $ Created a new Component called Utils.js and imported it to App.js. $ Deleted some state keys in App.js. Really, just had those there as a placeholder for thoughts. $ Created a handleInput  working function. In the scope of the function: On click of one of the Number buttons it checks for a matching id and setsState.input equal to the previous state and the new Number clicked. Finished toggleEvaluate, handleArithetic. $ handleArithmetic currently passes state to the Component who's "Name" matches the inserted argument from the callback onClick  when #MULTIPLY, #SUBTRACT, #ADD, or #DIVIDE is clicked. There is one case in the switch statement that will handle 'INPUT_ON' from the equals operator. $ Implimented the use of onClick inline functions on all button elements. $ toggleEvaluateExp now takes the equal operator as a element through checking equals 'name" attribute. It will eventually get the modified state to display to the user.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Javascript Calculator</title>
   </head>
   <body>
+    <h2>Javascript Calculator</h2>
     <script></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="root"></div>
