--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h2>Javascript Calculator</h2>
-    <script></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="root"></div>
   </body>
 </html>
