$ Implemented Math.round in evaluateExpression hook to round the evaluated answer to prevent infinity answers. $ Refactored the if conditional statement for '='. Most of these if conditional statements should utilize callback methods. Needs to be pure functions and resemble closure. $ Uploaded a local image to use for a background element behind the calculator. $ linked into google fonts for css styling on the display of the calculator and on Heading font styling $ Uploaded and implemented a local web font. $ Implemented animations on heading text and calculator. Making use of @media queries and keyframes upon render.

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap"
       rel="stylesheet"
     />
     <title>Javascript Calculator</title>
   </head>
   <body>
-    <h2>Javascript Calculator</h2>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!---Black-Notepad-CSS-idex.css-->
+    <div id="div4notepad">
+      <img src="blacknotepad.png" alt="Black-Notepad" type='image' id="blacknotepad"/>
+    </div>
+    <script></script>
+    <div class="title2">
+      <h4 id="developedText">Developed by:</h4>
+      <h2>Joshua Crawford</h2>
+      <h3 id='h3calctext'>JAVASCRIPT CALC. (OOP)</h3>
+    </div>
     <div id="root"></div>
   </body>
 </html>
